Fix Android demo not showing on top screen
Broken by merge of 'top-page-improvements' (4dde8c7d 53e440b4).

--- a/src/less/_keyvisual.less
+++ b/src/less/_keyvisual.less
@@ -193,8 +193,7 @@
 
   &-android-container {
     width: 450px;
-    visibility: hidden;
-    // display: none; // FIXME
+    display: none;
   }
 
   &-libraries {
